--- a/ModelagemEstatisticaAvancada.Rmd
+++ b/ModelagemEstatisticaAvancada.Rmd
@@ -9,22 +9,67 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# TRABALHO DE MODELAGEM ESTATÍSTICA AVANÇADA
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+## Professor: Paulo Maranhão
+## Prazo: 08/05/2022
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+## Questão 1: Seguem abaixo cinco bases de dados que se encontram do próprio R onde cada variável resposta encontra-se entre parêntesis. Cada grupo ou cada aluno deve escolher três base de dados. Para cada base de dados deve ser feito uma análise estatística conforme a teoria da disciplina de Modelagem Estatística Avançada. Cada análise deve responder os seguintes itens:
 
-```{r cars}
-summary(cars)
+### a) Usando o R determine o melhor modelo linear possível para a estimar o valor médio de cada variável resposta. Proponha quaisquer transformações que achar necessário para melhorar o ajuste do modelo.
+### b) Os pressupostos dos modelos foram atendidos? Apresente os resultados graficamente e analiticamente (testes formais) comprovando se as suposições foram satisfeitas.
+### c) Utilize uma parte dos dados para gerar previsões e intervalos de confiança. É possível dizer que o modelo foi bem ajustado?
+
+## Bases de Dados:
+### * mtcars (hp)
+### * LifeCycleSavings (sr)
+### * quakes (mag)
+### * swiss (fertility)
+### * trees (volume)
+
+
+#### Resumo mtcats, variável  resposta "hp"
+```{r}
+df_mtcars = data.frame(mtcars)
+print("Summary")
+summary(df_mtcars)
+print("Cor")
+cor(df_mtcars)
+```
+#### Resumo LifeCycleSavings, variável  resposta "sr"
+```{r}
+df_LifeCycleSavings =data.frame(LifeCycleSavings)
+print("Summary")
+summary(df_LifeCycleSavings)
+print("Cor")
+cor(df_LifeCycleSavings)
+```
+#### Resumo quakes, variável  resposta "mag"
+```{r}
+df_quakes =data.frame(quakes)
+print("Summary")
+summary(df_quakes)
+print("Cor")
+cor(df_quakes)
+```
+#### Resumo swiss, variável  resposta "fertility"
+```{r}
+df_swiss =data.frame(swiss)
+print("Summary")
+summary(df_swiss)
+print("Cor")
+cor(df_swiss)
 ```
 
-## Including Plots
+#### Resumo trees, variável  resposta "volume"
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+df_trees =data.frame(trees)
+print("Summary")
+summary(df_trees)
+print("Cor")
+cor(df_trees)
 ```
+### Comentário Americo: Me baseando pelos resumos acima, escolhi mtcars, quakes e swiss
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
