--- a/Canada.Rmd
+++ b/Canada.Rmd
@@ -2,7 +2,9 @@
 title: "Canada"
 author: "Americo Freitas"
 date: '2022-05-04'
-output: html_document
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -11,6 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## R Markdown
 
 ```{r}
+library(readxl)
 xlsfile <- file.path('/cloud/project','Canada.xlsx')
 df <- read_xlsx(xlsfile)
 df$...1 <- NULL
@@ -76,7 +79,7 @@ summary(mod2)
 O modelo linear melhorou significativamente
 
 ```{r}
-mod = lm(log(PROD ~ BALGR + REII + PROD + VALU + FFD_DVA + DFD_FVA + CONS_VA + EXGR_TDVAIND + EXGR_SERV_DVASH + 
+mod = lm(log(PROD) ~ BALGR + REII + PROD + VALU + FFD_DVA + DFD_FVA + CONS_VA + EXGR_TDVAIND + EXGR_SERV_DVASH + 
            EXGR_SERV_FVASH + VALU_FFDDVA + PROD_VASH + DEXFVAPSH + FEXDVAPSH,data=df)
 summary(mod)
 ```
