--- a/Canada.Rmd
+++ b/Canada.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "Canada"
-author: "Americo Freitas"
+author: "Grupo: Americo Freitas, Arleks dos Santos e Luciano Ozorio"
 date: '2022-05-04'
 output:
-  html_document: default
   pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
